# notlong

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  diesel.toml  points.md  tests.md  tests.txt  thoughts.md
migrations/2025-01-16-142145_create_short_urls/: down.sql  up.sql
migrations/2025-01-16-235948_create_wallet_addresses/: down.sql  up.sql
migrations/2025-01-18-150719_add_encrypted_column/: down.sql  up.sql
migrations/2025-01-18-191714_add_expired_column/: down.sql  up.sql
migrations/2025-01-18-194534_add_transaction_hash/: down.sql  up.sql
src/: keys.rs  main.rs  mod.rs  schema.rs  utils.rs
src/db/: mod.rs  models.rs  operations.rs  schema.rs
src/routes/: expire.rs  mod.rs  redirect.rs  shorten.rs  wcreate.rs  wupdate.rs
src/utils/: crypto.rs  keys.rs  mod.rs  rcode.rs
