[package]
name = "notlong"
version = "0.1.0"
edition = "2021"
description = "a new kind of url shortener"
license = "AGPL-3.0"
homepage = "https://imcook.in"
documentation = "https://www.linkedin.com/in/abdibrokhim/"
repository = "https://github.com/abdibrokhim/notlong"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "^2.1.1", features = ["postgres", "chrono", "r2d2"] }
r2d2 = ">= 0.7, < 0.9"
r2d2-diesel = "1.0"
diesel_migrations = "2.2.0"
shuttle-runtime = "0.51.0"
shuttle-actix-web = "0.51.0"
rand = "0.8.5"
aes-gcm = "0.10"
aes = "0.8"
ring-compat = "0.8.0"
base64 = "0.22.1"
hex = "0.4"